#206 v15.2.24 After entering new answer, page title is compressed Cannot reproduce - other issues fixed points-list.component.ts display pointOrAnswer in count question.component.html use align-stretch styles.scss align-stretch sub divs display flex and align-items center

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -109,6 +109,11 @@ router-outlet + *, /* All content injected after router-outlet */
   align-items: baseline;
 }
 
+.align-stretch div {
+  display: flex;
+  align-items: center;
+}
+
 .primary {
   color: #3700b3;
 }
